[package]
name = "galaxyql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { version = "0.15.10", default-features = false }
juniper_rocket = "0.8.2"
rocket = { version = "0.5.0-rc.2", default-features = false }